--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,24 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+.idea/
+userStream/target/
+*.iml
+*rebel.xml
+*.diff
+commonsUtils/target/
+esService/target/
+eurekaOne/target/
+eurekaTwo/target/
+order/target/
+gateway/target/
+nacosGateway/target/
+nacosOpen/target/
+nacosUser/target/
+orderTwo/target/
+roleStream/target/
+seataAccount/target/ 
+seataOrder/target/
+seataStorage/target/
+sentinel/target/
+sentinelfeign/target/
+submeterNacos/target/
+userOne/target/
+userTwo/target/
