--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
         <lombok.version>1.16.18</lombok.version>
         <mysql.version>5.1.6</mysql.version>
         <druid.version>1.1.16</druid.version>
-        <mybatis.version>1.3.2</mybatis.version>
+      <!--  <mybatis.version>1.3.2</mybatis.version>-->
     </properties>
     <!--子模块继承之后，提供作用：锁定版本+子module不用groupId和version-->
     <dependencyManagement>
@@ -95,7 +95,7 @@
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
-                <version>${mybatis.version}</version>
+                <version>1.3.2</version>
             </dependency>
             <dependency>
                 <groupId>junit</groupId>
