--- a/nacosGateway/src/main/resources/bootstrap.yml
+++ b/nacosGateway/src/main/resources/bootstrap.yml
@@ -2,9 +2,14 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 1.117.54.209:1111
+        #nacos服务地址
+        server-addr: 175.178.44.76:1111
       config:
-        server-addr: 1.117.54.209:1111
+        #nacos服务配置地址
+        server-addr: 175.178.44.76:1111
         # 配置文件后缀名为yaml
         file-extension: yaml
-        namespace: 96a50e5a-b6dd-4d19-b61d-f9b012d725a5
+        # 命名空间
+        namespace: 00bfa650-aa9e-41f3-a0fd-d6bd84b8e5f8
+        # 属于那个组
+        group: CLOUD2022_GROUP
