--- a/userStream/src/main/resources/bootstrap.yml
+++ b/userStream/src/main/resources/bootstrap.yml
@@ -3,14 +3,13 @@ spring:
     nacos:
       discovery:
         #nacos服务地址
-        server-addr: 1.117.54.209:1111
+        server-addr: 175.178.44.76:1111
       config:
         #nacos服务配置地址
-        server-addr: 1.117.54.209:1111
+        server-addr: 175.178.44.76:1111
         # 配置文件后缀名为yaml
         file-extension: yaml
         # 命名空间
-        namespace: 96a50e5a-b6dd-4d19-b61d-f9b012d725a5
+        namespace: 00bfa650-aa9e-41f3-a0fd-d6bd84b8e5f8
         # 属于那个组
-        group: DEFAULT_GROUP
-
+        group: CLOUD2022_GROUP
