--- a/userStream/pom.xml
+++ b/userStream/pom.xml
@@ -23,6 +23,26 @@
             <version>${project.version}</version>
         </dependency>
 
+        <!-- ******************** EasyExcel依赖包 开始 ******************** -->
+
+        <!-- EasyExcel依赖包 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>2.2.10</version>
+        </dependency>
+        <!--邮件包-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        <!--短信-->
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>dysmsapi20170525</artifactId>
+            <version>2.0.5</version>
+        </dependency>
+
         <!-- xxl-job-core -->
         <dependency>
             <groupId>com.xuxueli</groupId>
